src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');



:root {
  font-family: "Lato", sans-serif;
  line-height: 1.5;
  font-weight: 900;

  color-scheme: light dark;
  color: light-dark(#0d0d0d, #ececec);
  background: light-dark(#f3f3f3, #171717);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

body {
  width: 100%;
  max-width: 640px;
  min-height: 100vh;
  margin: 0 auto;
  padding: 0 24px;
}

input,
textarea,
select,
button {
  padding: 4px 8px;
  border-radius: 4px;
  border: 1px solid light-dark(#d1d1d1, #333333);
}

input[type="submit"]:hover,
input[type="reset"]:hover,
button:hover {
  background: lightgray;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

input[aria-invalid="true"],
textarea[aria-invalid="true"],
select[aria-invalid="true"] {
  border-color: Salmon;
  outline-color: rgb(208, 50, 32);
}

